@@ -51,6 +51,9 @@ GROUP_SIGNATURE	= See you!|			Your admin|
 # if binddn and bindpw are blank or left out, an anonymous bind is used
 # 
 # LDAP_MAIL = false # or false if you don't want to use it
+# If you have at least LDAP 2.3 installed, you can use LDAP_URI
+# LDAP_URI = ldaps://my.server:389
+# Otherwise you can specify LDAP_HOST and LDAP_PORT
 # LDAP_HOST = ldap
 # LDAP_PORT = 389
 # LDAP_BINDDN = uid=ReadOnlyUser,o=YourOrg
