@@ -1,4 +1,5 @@
 Changes in quota-tools from 3.14 to 3.15
+* modified configure scripts and warnquota to check for new LDAP library and allow use of URI (Jan Kara)
 * fix LDAP scripts to set VISUAL instead of EDITOR (Michael Meskes)
 * added ext4 filesystem to the list of supported filesystems (Jan Kara)
 * pot.o is now compiled with CFLAGS (Ladislav Michnovic)
